# batchkit

./: .gitignore  CONTRIBUTING.md  README.md  RELEASING.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: BATCH_PYTHON_ABSTRACTIONS_ANALYSIS.md  openai-batch-abstractions-analysis.md
scripts/: bump_version.py
src/batchkit/: __init__.py  async_client.py  client.py  errors.py  jobs.py  manifests.py  openai_provider.py  results.py  retry.py  types.py
tests/: test_bump_version_script.py  test_client.py  test_helpers.py  test_openai_provider.py  test_package.py  test_results.py
